cluster/system/prometheus-stack/templates/metrics-proxy.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: metrics-proxy
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: metrics-proxy
  template:
    metadata:
      labels:
        name: metrics-proxy
    spec:
      hostNetwork: true
      tolerations:
      - key: node-role.kubernetes.io/master
        operator: Exists
        effect: NoSchedule
      containers:
      - name: metrics-proxy
        image: haproxy:3.2-alpine@sha256:93ad638f0dc5ad6c0c2a8115cef152cde43cb1f9f43dd881224d41fea3dd17c1
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 50m
            memory: 175Mi
        volumeMounts:
        - name: config
          mountPath: /usr/local/etc/haproxy
      terminationGracePeriodSeconds: 30
      volumes:
        - name: config
          configMap:
            name: metrics-proxy-config
